--- a/toggle-switch.css
+++ b/toggle-switch.css
@@ -346,7 +346,6 @@
   }
   .switch-ios.switch-light > span {
     display: block;
-    width: 100%;
     height: 2em;
     background-color: #D8D9DB;
     border-radius: 1.75em;
